--- a/simple/Makefile
+++ b/simple/Makefile
@@ -1,7 +1,11 @@
-all:
-	dune exec ./proving.exe
+ROOT = $(shell dune exec ./get_cwd.exe)
 
 PROOFS = $(wildcard proofs/*.proof)
 
+all: build
+	"$(ROOT)/proving.exe"
+
+build:
+	dune build
 test:
-	$(foreach p, $(PROOFS), cat $(p) | dune exec ./prover.exe)
+	$(foreach p, $(PROOFS), cat $(p) | dune exec ./proving.exe)
